# snake

./: CMakeLists.txt  snake.cpp
lib/: CMakeLists.txt  neural_network (copy).bkp  neural_network.cpp  neural_network.cpp~  neural_network.h  neural_network.h~
